--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
-			<artifactId>org.springframework.context</artifactId>
+			<artifactId>spring-context</artifactId>
 			<version>3.1.1.RELEASE</version>
 		</dependency>
 		<dependency>
